Fixed horizontal scroll in desktop view

--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,7 @@ header {
     .main-content .middle-img {
         display: block;
         margin: 3rem auto;
+        width: 100%;
     }
 
     .main-content .bottom-content {
